recurringdonations/trunk/src/objects/Recurring_Donation__c.object
<CustomObject>
    <description>Recurring Donations and Pledges</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002bOmREAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donor_Name__c</fullName>
        <formula>if(
  LEN(Contact__c)&gt;0,
  Contact__r.FirstName  &amp; &quot; &quot; &amp; Contact__r.LastName,
   Organization__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <formula>IF( text(Schedule_Type__c)=$Label.RecurringDonationMultiplyValue , Amount__c , IF(Installments__c&gt;0,Amount__c / Installments__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label># of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RecurringDonations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiply By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divide By</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>CASE(
 Schedule_Type__c ,
&quot;Multiply By&quot;, Installments__c * Amount__c ,
&quot;Divide By&quot;,Amount__c
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fake_amount__c</fullName>
        <formula>IF(
text(Schedule_Type__c)=$Label.RecurringDonationMultiplyValue , Amount__c , IF(Installments__c&gt;0,Amount__c / Installments__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fake amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Recurring Donation/Pledge</label>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations &amp; Pledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>